# sodium_bench

./: 3d_weld_encryption_buf_num.gnuplot  3d_weld_encryption_buf_size.gnuplot  CMakeLists.txt  README.md  generate_gnuplot_files.py  plot_auth_encrypt.gnuplot  plot_auth_encrypt_decrypt.gnuplot  result_analysis.sh
src/: auth_encryption.hpp  authentication.hpp  crypto_functions.cpp  crypto_functions.hpp  data_container.hpp  encryption.hpp  global_buffer_variant.hpp  global_buffers.hpp  main.cpp  multithread_encryption.hpp  multithread_ram_encryption.hpp  sort_tests.hpp  static_container.hpp  threaded_utils.hpp  unit_tests.cpp  utils.cpp  utils.hpp  weld_arch.cpp  weld_arch.hpp  weld_encrypted_auth.hpp
